--- a/app.json
+++ b/app.json
@@ -222,8 +222,8 @@
       "type": "number",
       "title": {
         "en": "Temperature2",
-        "de": "Radon kurzfristig",
-        "nl": "Radon korte tijd",
+        "de": "Temperatur2",
+        "nl": "Temperatuur2",
         "no": "Temperatur2"
       },
       "icon": "/assets/temperature.svg",
@@ -309,7 +309,6 @@
       },
       "min": 0,
       "max": 40,
-      "step": 1
     },
 
     "measure_energy": {
