--- a/app.json
+++ b/app.json
@@ -262,6 +262,7 @@
       },
       "min": 0,
       "max": 40,
+      "decimals": 2
     },
  
     "measure_temperature3": {
@@ -308,6 +309,7 @@
       },
       "min": 0,
       "max": 40,
+      "decimals": 2
     },
 
     "measure_energy": {
